--- a/pp.css
+++ b/pp.css
@@ -155,7 +155,7 @@ button{
     height: 100px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 640px) {
     #title{
         font-size: 10rem;
     }
@@ -174,7 +174,17 @@ button{
     }
     
 }
-
+@media only screen and (max-width: 720px){
+    .card-header-title{
+        margin-left: 20px;
+    }
+    .card-header{
+        margin-right: 20px; 
+    }
+    .footer{
+        height: 150px;
+    }
+}
 
 @media only screen and (max-width: 1024px){
     #project-card{
