--- a/pp.css
+++ b/pp.css
@@ -174,13 +174,16 @@ button{
     }
     
 }
-@media only screen and (max-width: 720px){
+@media only screen and (max-width: 768px){
     .card-header{
         margin-left: 40px;
         margin-right: 40px; 
     }
     .footer-text{
         font-size: 2rem;
+    }
+    #projects-container{
+        width: 100%;
     }
 }
 
