--- a/pp.css
+++ b/pp.css
@@ -174,6 +174,9 @@ button{
     }
     
 }
+.card-header-title{
+        margin-right: -10%; 
+    }
 @media only screen and (max-width: 768px){
     .card-header-title{
         margin-right: -10%; 
