--- a/pp.css
+++ b/pp.css
@@ -3,6 +3,18 @@
 font-family: Saiyansans;
 src: url('saiyan_sans/Saiyan-Sans.ttf');
 }
+.indigo{
+    color: indigo !important;
+}
+.orange{
+    color: indigo !important
+}
+._has-background-indigo{
+    background-color: indigo !important
+}
+._has-background-orange{
+    background-color: orange !important
+}
 #head{
     font-family: 'Saiyansans','orbitron', sans-serif;
     font-size: 4.0rem;
@@ -16,14 +28,14 @@ src: url('saiyan_sans/Saiyan-Sans.ttf');
     transition: all .5s;
     transition: rotate 0s;
 }
-#brand{
+/* #brand{
     text-shadow: 1px 1px gray;
     color: orange;
     font-size: 4rem;
     font-weight: 700;
     position: relative;
     top: -25px;
-}
+} */
 #nav{
     height: 5% 
 }
@@ -217,10 +229,10 @@ button{
     #head{
         font-size: 10rem;
     }
-    #brand{
+    /* #brand{
         position: absolute;
         top: -25px;
-    }
+    } */
     #dball{
         transition: all linear;
     }
